Completed Till Therapist Session booking by patient